# coding-swarm

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  swarm.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/config/: README.md  models.yaml
agents/prompts/: CODE-REVIEWER.md  GENERALIST.md  OPTIMIZER.md  TEST-WRITER.md
benchmarks/: PERFORMANCE.md
ci/: build_docker.sh  lint.sh  run_tests.sh
coding_swarm/: __init__.py  cli.py  config.py  core.py  monitor.py  sync.py
docs/: AGENT-ARCHITECTURE.md  OVERVIEW.md  TEST-AND-CI.md
examples/feature-build/: README.md  swarm.yaml
examples/simple-refactor/: README.md  swarm.yaml
scripts/: entrypoint.sh  harness.sh  setup-project.sh
